<resources>
    <string name="app_name">TianMi</string>
    <string name="string001">请去\'设置\'中开启本应用的图片媒体访问权限</string>
    <string name="string002">"请去\'设置\'中开启本应用的SD卡访问权限</string>
    <string name="string003">"请去\'设置\'中开启本应用的相机访问权限"</string>
    <string name="string004">请求访问相册</string>
    <string name="string005">请求访问SD卡</string>
    <string name="string006">请求打开相机</string>
    <string name="string007">请允许使用</string>
    <string name="string008">权限</string>
    <string name="string009">以正常使用APP的所有功能</string>
    <string name="string010">再按一次退出天米</string>
    <string name="string011">首页</string>
    <string name="string012">手机</string>
    <string name="string013">配件</string>
    <string name="string014">积分</string>
    <string name="string015">服务</string>
    <string name="string016">购物车</string>
    <string name="string017">贴吧</string>
    <string name="string018">板块</string>
    <string name="string019">活动</string>
    <string name="string020">精华</string>
    <string name="string021">天米</string>
    <string name="string022">商城</string>
    <string name="string023">论坛</string>
    <string name="string024">我的</string>
    <string name="string025">账号</string>
    <string name="string026">请登录</string>
    <string name="string027">退出</string>
    <string name="string028">个人中心</string>
    <string name="string029">我的订单</string>
    <string name="string030">收藏</string>
    <string name="string031">礼品兑换</string>
    <string name="string032">消息</string>
    <string name="string033">提醒</string>
    <string name="string034">设置</string>
    <string name="string035">天米账号登录</string>
    <string name="string036">请输入邮箱账号</string>
    <string name="string037">请输入6-12位密码</string>
    <string name="string038">登录</string>
    <string name="string039">注册账号</string>
    <string name="string040">忘记密码？</string>
    <string name="string041">天米账号注册</string>
    <string name="string042">请输入非中文账号</string>
    <string name="string043">获取验证码</string>
    <string name="string044">请输入邮箱验证码</string>
    <string name="string045">请输入密码</string>
    <string name="string046">注册</string>
    <string name="string047">下一步</string>
    <string name="string048">确认</string>
    <string name="string049">请输入新密码</string>
    <string name="string050">再次输入密码</string>
    <string name="string051">注册即表示同意</string>
    <string name="string052">服务协议</string>
    <string name="string053">请输入昵称</string>
    <string name="string054">请再次输入密码</string>
    <string name="string055">请输入您的常用邮箱用于验证</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
