<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dgkj.tianmi.fragment.ShangchengFragment"
    android:id="@+id/fl"
    android:orientation="vertical">
    <include layout="@layout/header_layout"/>
    <RadioGroup
        android:id="@+id/rg_top_shangcheng"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="#e9f9ff"
        android:visibility="visible">
        <RadioButton
            android:id="@+id/rb_shangcheng1"
            style="@style/timmy_Radiobutton"
            android:text="@string/string011"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rb_shouji"
            style="@style/timmy_Radiobutton"
            android:text="@string/string012"
            />
        <RadioButton
            android:id="@+id/rb_peijian"
            style="@style/timmy_Radiobutton"
            android:text="@string/string013"
            />
        <RadioButton
            android:id="@+id/rb_jifen"
            style="@style/timmy_Radiobutton"
            android:text="@string/string014"
            />
        <RadioButton
            android:id="@+id/rb_fuwu"
            style="@style/timmy_Radiobutton"
            android:text="@string/string015"
            />
        <RadioButton
            android:id="@+id/rb_car"
            style="@style/timmy_Radiobutton"
            android:text="@string/string016"
            />
    </RadioGroup>

    <com.tencent.smtt.sdk.WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.tencent.smtt.sdk.WebView>
</LinearLayout>
