<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dgkj.tianmi.fragment.MineFragment"
    android:id="@+id/fl"
    android:orientation="vertical">
 <include layout="@layout/header_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f6"
        >
        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/string025"
                android:textColor="#43556c"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="10dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">
                <TextView
                    android:id="@+id/tv_login"
                    android:text="@string/string026"
                    android:textColor="#c65a5a"
                    android:drawableLeft="@mipmap/weidenglu"
                    style="@style/timmy_TextView"
                    />
                <TextView
                    android:id="@+id/tv_logout"
                    android:text="@string/string027"
                    android:textColor="#c65a5a"
                    android:drawableLeft="@mipmap/tuichu_icon"
                    style="@style/timmy_TextView"
                    android:visibility="gone"
                    />
            </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/string022"
                android:textColor="#43556c"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/tv_sc_usercenter"
                android:text="@string/string028"
                android:drawableLeft="@mipmap/touxiang_icon"
                style="@style/timmy_TextView"
                />
            <TextView
                android:id="@+id/tv_myorder"
                android:text="@string/string029"
                android:drawableLeft="@mipmap/dingdan"
                style="@style/timmy_TextView"
                android:layout_marginTop="1dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/string023"
                android:textColor="#43556c"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/tv_lt_usercenter"
                android:text="@string/string028"
                android:drawableLeft="@mipmap/touxiang_icon"
                style="@style/timmy_TextView"
                />

            <TextView
                android:id="@+id/tv_shoucang"
                android:text="@string/string030"
                android:drawableLeft="@mipmap/shoucang_icon"
                style="@style/timmy_TextView"
                android:layout_marginTop="1dp"
                />


            <TextView
                android:id="@+id/tv_liping"
                android:text="@string/string031"
                android:drawableLeft="@mipmap/lipinduihuan_icon"
                style="@style/timmy_TextView"
                android:layout_marginTop="1dp"
                />

            <TextView
                android:id="@+id/tv_xiaoxi"
                android:text="@string/string032"
                android:drawableLeft="@mipmap/xiaoxi_icon"
                style="@style/timmy_TextView"
                android:layout_marginTop="1dp"
                />

            <TextView
                android:id="@+id/tv_shezhi"
                android:text="@string/string034"
                android:drawableLeft="@mipmap/shezhi_icon"
                style="@style/timmy_TextView"
                android:layout_marginTop="1dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
