<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dgkj.tianmi.view.LoginActivity"
    android:background="#f6f6f6"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_return"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fff"
        android:text="@string/string035"
        android:textSize="18sp"
        android:textColor="#6c5a5a"
        android:gravity="center"
        android:drawableLeft="@mipmap/fanhui"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:hint="@string/string036"
        android:textSize="16sp"
        android:textColor="#909090"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:layout_marginTop="1dp"
        android:hint="@string/string037"
        android:textSize="16sp"
        android:textColor="#909090"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/string039"
        android:textSize="14sp"
        android:textColor="#43556c"
        android:layout_marginLeft="10dp"
        android:gravity="center|left"/>
    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/string040"
        android:textSize="14sp"
        android:textColor="#43556c"
        android:layout_marginRight="10dp"
        android:gravity="center|right"/>
</LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/string038"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@drawable/btn_background"
        android:layout_marginTop="50dp"
        />
</LinearLayout>
