<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:orientation="vertical"
    tools:context="com.dgkj.tianmi.view.ConfirmPasswordActivity">

    <TextView
        android:id="@+id/tv_return"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fff"
        android:text="@string/string040"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#6c5a5a"
        android:drawableLeft="@mipmap/fanhui"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:hint="@string/string049"
        android:textSize="16sp"
        android:textColor="#909090"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:layout_marginTop="1dp"
        android:hint="@string/string050"
        android:textSize="16sp"
        android:textColor="#909090"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/string048"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@drawable/btn_background"
        android:layout_marginTop="50dp"
        />


</LinearLayout>
