<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:orientation="vertical"
    tools:context="com.dgkj.tianmi.view.ForgetPasswordActivity">
    <TextView
        android:id="@+id/tv_return"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fff"
        android:text="@string/string040"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#6c5a5a"
        android:drawableLeft="@mipmap/fanhui"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/et_phoneNum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:hint="@string/string042"
        android:textSize="16sp"
        android:textColor="#909090"
        android:paddingLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="1dp">

        <EditText
            android:id="@+id/et_checkcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/string044"
            android:textSize="14sp"
            android:background="#fff"
            android:textColor="#909090"
            android:paddingLeft="10dp"
            android:gravity="center|left"/>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="#43556c"
            android:layout_gravity="center"></View>
        <TextView
            android:id="@+id/tv_getcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#333"
            android:text="@string/string043"
            android:scaleType="fitXY"
            android:background="#fff"
            android:paddingRight="10dp"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/string047"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@drawable/btn_background"
        android:layout_marginTop="50dp"
        />

</LinearLayout>
